# product_management

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: main.py  mypy.ini
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 6f04e310d184_create_category_table.py
app/routers/: category_routes.py  deps.py
app/schemas/: category.py
app/tests/: conftest.py
app/tests/routes/: test_category_routes.py
app/tests/schemas/: test_category_schema.py
app/tests/use_cases/: test_category_use_case.py
app/use_cases/: category.py
